2010-09-29  Jaroslav Hajek  <highegg@gmail.com>

	* oct-map.cc (octave_map::contents): Fix off-by-1 error.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (OCTAVE_GLPK_GET_REAL_PARAM,
	OCTAVE_GLPK_GET_INT_PARAM): Use GETFIELD to access map fields,
	not CONTENTS.
	* DLD-FUNCTIONS/amd.cc (Famd): Likewise.
	* DLD-FUNCTIONS/luinc.cc (Fluinc): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/urlwrite.cc (F__ftp_dir__): Use octave_scalar_map
	instead of Octave_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/luinc.cc (Fluinc): Use octave_scalar_map
	instead of Octave_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Use octave_scalar_map
	instead of Octave_map.  Use scalar values where appropriate in
	call to glpk.
	(OCTAVE_GLPK_GET_REAL_PARAM, OCTAVE_GLPK_GET_INT_PARAM):
	Update for octave_scalar_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/amd.cc (Famd): Use octave_scalar_map instead of
	Octave_map.
	* DLD-FUNCTIONS/cellfun.cc (get_output_list): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dispatch.cc (Fdispatch): Use octave_scalar_map
	instead of Octave_map.
	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::handle): Likewise.
	* DLD-FUNCTIONS/regexp.cc (octregexp): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/eigs.cc (Feigs): Use octave_scalar_map instead
	of Octave_map.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/getpwent.cc (mk_pw_map): Use octave_scalar_map
	instead of Octave_map.
	* DLD-FUNCTIONS/getgrent.cc (mk_gr_map): Likewise.
	* DLD-FUNCTIONS/getrusage.cc (Fgetrusage): Likewise.

2010-09-29  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/time.cc (intfield, stringfield): New functions.
	(mk_tm_map, extract_tm): Arg is now octave_scalar_map instead of
	Octave_map.
	(extract_tm): Use local intfield and setfield functions.