@@ -1,3 +1,9 @@
+2010-09-30  Jaroslav Hajek  <highegg@gmail.com>
+
+	* pt-idx.cc (tree_index_expression::make_arg_struct): Use octave_map
+	instead of Octave_map.
+	* pt-idx.h: Update decl.
+
 2010-09-29  Jaroslav Hajek  <highegg@gmail.com>
 
 	* oct-map.cc (octave_map::contents): Fix off-by-1 error.
